--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "coral-bleaching"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+# debug = true
 
 [dependencies]
 byteorder = "1.4.3"
@@ -14,7 +15,3 @@ num-traits = "0.2.14"
 rayon = "1.5.1"
 tempfile = "3.2.0"
 thread_local = "1.1.3"
-
-[dependencies.ndarray]
-version = "0.15.3"
-features = ["rayon"]
