--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ edition = "2018"
 byteorder = "1.4.3"
 clap = "2.33.3"
 hdf5 = "0.7.1"
-indicatif = "0.16.2"
 num-traits = "0.2.14"
+partial_sort = "0.1.2"
 rayon = "1.5.1"
 tempfile = "3.2.0"
 thread_local = "1.1.3"
+
+[dependencies.indicatif]
+version = "0.16.2"
+features = ["rayon"]
